# itam_hack

./: README.md  config.py  database.py  old_database.py  pyproject.toml
app/: app.py  crud.py  models.py  schemas.py  tortoise_models.py  utils.py
migrations/: env.py
migrations/models/: 0_20230909183104_init.py  0_20230910022634_init.py  1_20230910020049_new hack relations.py  1_20230910024123_update.py
migrations/versions/: 2023_09_10_1543-f27c08814042_create_tables.py  2023_09_10_1903-82f50165ec86_team_name_is_unique.py  2023_09_10_1907-9a87437382f5_added_captain_id_field.py
